# otel-arrow-views

./: Cargo.toml
benches/: logs_traversal.rs
src/: Untitled-1.rs  main.rs  otlp_bytes.rs  otlp_bytes_lazy.rs  prost_structs.rs
src/proto/: opentelemetry.proto.logs.v1.rs
